# apprentice

./: .gitignore  README.md  pyproject.toml
config/: apprentice.toml  catalog.toml  no-magic-schema.yaml
config/templates/: manim_scene.py.j2
docs/: architecture.md  cli-reference.md  configuration.md  local-models.md  system-design.md  troubleshooting.md
scripts/: integration_test.py  validate_foundation.py
src/apprentice/: __init__.py  cli.py
src/apprentice/agents/: __init__.py  assessment.py  base.py  discovery.py  implementation.py  instrumentation.py  packaging.py  review.py  visualization.py
src/apprentice/core/: __init__.py  budget.py  circuit_breaker.py  config.py  gate_agent.py  metrics.py  observability.py  orchestrator.py  pipeline.py  progress.py  queue.py  scheduler.py  session_store.py  tokens.py
src/apprentice/gates/: __init__.py  base.py  consistency.py  correctness.py  lint.py  review.py  schema_compliance.py
src/apprentice/models/: __init__.py  agent.py  artifact.py  budget.py  cycle.py  work_item.py
src/apprentice/prompts/: loader.py  (+9 more)
tests/: test_adk_agents.py  test_adk_orchestrator.py  test_agent_models.py  test_budget_callbacks.py  test_cli.py  test_config.py  test_discovery_stage.py  test_gate_agent.py  test_gates.py  test_implementation_agent.py  test_implementation_stage.py  test_metrics.py  test_models.py  test_observability.py  test_orchestrator.py  test_pipeline.py  test_prompts.py  test_provider_factory.py  test_providers.py  test_session_store.py  test_stages.py  test_validation_script.py  test_validator_tools.py  test_validators.py
(+22 files in other folders)
